--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,7 +55,7 @@
             <div class="arduino-table">
 
                 <table>
-                    <tbody class="ardunio-table-body">
+                    <tbody class="arduino-table-body">
                         <tr>
                             <th>Name</th>
                             <th>Standort</th>
@@ -93,11 +93,11 @@
 
         </div>  
 
-        <div class="confirm-ardunio-delete" style="display: none;">
-            <form class="confirm-ardunio-delete__form">
-                <p class="confirm-ardunio-delete__name">Name: </p>
-                <input class="confirm-ardunio-delete__input" type="text" required>
-                <button class="confirm-ardunio-delete__button" type="submit"></button>
+        <div class="confirm-arduino-delete" style="display: none;">
+            <form class="confirm-arduino-delete__form">
+                <p class="confirm-arduino-delete__name">Name: </p>
+                <input class="confirm-arduino-delete__input" type="text" required>
+                <button class="confirm-arduino-delete__button" type="submit"></button>
             </form>
         </div>
 
@@ -135,7 +135,7 @@
                     </div>
 
                     <div class="form-element form-config-download">
-                        <a href="http://127.0.0.1:3000/api/ardunio/config/download" class="new-arduino-menu__forms--downloadconfig" type="link">Config herunterladen</a>
+                        <a href="http://127.0.0.1:3000/api/arduino/config/download" class="new-arduino-menu__forms--downloadconfig" type="link">Config herunterladen</a>
                     </div>
 
                     <div class="form-element form-submit">
