--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Ardunio Login</title>
+        <title>arduino Login</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./source/css/login.css">
@@ -16,7 +16,7 @@
         </div>
 
         <div class="login-header">
-            <p>Ardunio Webinterface</p>
+            <p>arduino Webinterface</p>
         </div>
 
         <div class="login-menu">
