--- a/new frontend/index.html
+++ b/new frontend/index.html
@@ -29,9 +29,13 @@
         </div>
 
         <section class="arduino-overview-table">
+            
+            <!--
             <div class="ardunio-init-info" style="display: none;">
                 <p>Es wurden noch keine Ardunios erstellt!</p>
             </div>
+
+            -->
             <table>
                 <thead>
                     <tr class="arduino-overview-table__header arduino-overview-table-row-top">
@@ -45,7 +49,7 @@
                         <th><button class="arduino-overview-table__name-button button-general button-purple" id="button-create" type="button">Create</button></th>
                     </tr>
                 </thead>
-                <tbody class="arduino-overview-table__body" style="display: none;">
+                <tbody class="arduino-overview-table__body">
                 </tbody>
             </table>
         </section>
